about page spacing issue

--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -6,11 +6,12 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  gap: 5%;
 }
 
 .about-right {
   align-self: flex-start;
-  width: 17.5rem;
+  width: 20%;
   height: 25rem;
   display: flex;
   justify-content: center;
@@ -18,7 +19,7 @@
 }
 
 .about-left {
-  width: 35vw;
+  width: 40%;
   background-color: var(--accent-color);
   color: white;
   padding: 2.25rem;
